changed auth logic and make holiday page ,Attendance page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.543.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
